Formatted code, fixed hover animation colour and text, added loading animation to center bean, added light/dark mode recognition and variables, using Montserrat font, added css comment desc

--- a/style.css
+++ b/style.css
@@ -1,35 +1,71 @@
+/* Dark Mode Variables */
+:root {
+  --accent-color1: #f05a3f;
+  --accent-colour2: #f5f5db;
+  --primary-bg-color: #111111;
+  --primary-bg-color-opaque1: #111111cc;
+  --primary-bg-color-opaque2: #11111140;
+  --secondary-bg-color: #222222;
+  --secondary-bg-color-opaque1: #222222cc;
+  --secondary-bg-color-opaque2: #22222240;
+  --text-color: #eeeeee;
+  --shadows: #00000040;
+  --highlights: #ffffff80;
+}
+
+/* Light Mode Variables */
+@media (prefers-color-scheme: light) {
+  :root {
+    --accent-color1: #f05a3f;
+    --accent-colour2: #f5f5db;
+    --primary-bg-color: #ffffff;
+    --primary-bg-color-opaque1: #ffffffcc;
+    --primary-bg-color-opaque2: #ffffff40;
+    --secondary-bg-color: #f0f0f0;
+    --secondary-bg-color-opaque1: #f0f0f0cc;
+    --secondary-bg-color-opaque2: #f0f0f040;
+    --text-color: #333333;
+    --shadows: #cccccc40;
+    --highlights: #00000080;
+  }
+}
+
+/* Import Google Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
 body {
-  margin: 0px 0px 20px 0px;
-  background-color: #f05a3f;
-  font-family: Parkinsans, sans-serif;
+  margin: 0px 0px 15px 0px;
+  background-color: var(--accent-color1);
+  font-family: Montserrat, sans-serif;
   font-size: 12pt;
 }
 h1 {
   text-align: center;
-  color: #111;
+  color: var(--primary-bg-color);
   font-weight: bold;
 }
 
 p {
-  color: #222;
+  color: (var(--secondary-bg-color));
 }
 
+/* Navigation Bar */
 .navbar {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #eee;
+  color: var(--text-color);
   text-align: center;
   overflow: hidden;
   position: fixed;
   bottom: 0;
   width: 100%;
   border-radius: 25px 25px 0px 0px;
-  background: rgba(34, 34, 34, 0.8);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  background-color: var(--secondary-bg-color-opaque1);
+  box-shadow: 0 4px 30px var(--shadows);
   backdrop-filter: blur(5px);
-  border: 1px solid rgba(34, 34, 34, 0.16);
+  border: 1px solid var(--primary-bg-color-opaque2);
   z-index: 1000;
 }
 
@@ -37,51 +73,70 @@ p {
   width: 100%;
   float: right;
   display: block;
-  color: #eee;
+  color: var(--text-color);
   text-align: center;
-  padding: 14px 16px;
+  padding: 15px;
   text-decoration: none;
   font-size: 17px;
   position: relative;
   overflow: hidden;
-  transition: color 0.5s ease-in-out 0.25s, font 0.5s ease-in-out 0.25s;
+  transition: color 0.25s ease-in-out 0.25s, font 0.25s ease-in 0.25s,
+    font 0.25s ease-out 0s;
 }
 
 .navbar a::before {
-  content: ''; 
+  content: "";
   position: absolute;
   bottom: -100%;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.2);
-  backdrop-filter: brightness(10) opacity(0.5);
+  color: var(--primary-bg-color);
+  background: var(--highlights);
+  backdrop-filter: brightness(15) opacity(0.5);
   transition: bottom 0.1s ease-in-out;
   pointer-events: none;
 }
 
+@media (prefers-color-scheme: light) {
+  .navbar a::before {
+    backdrop-filter: brightness(0) opacity(0.5);
+  }
+}
+
 .navbar a:hover {
-  color: black;
-  font-weight: bold;
-  z-index: 100;
+  color: var(--primary-bg-color);
 }
 
 .navbar a:hover::before {
   bottom: 0;
 }
 
+.navbar a span {
+  color: var(--text-color);
+  position: relative;
+  transition: color ease-in 0.2s, color ease-out 0.2s;
+}
+
+.navbar a:hover span {
+  color: var(--primary-bg-color);
+  font-weight: bold;
+}
+
+/* Logo */
 .logo {
-    float: left;
-      width: 50px;
-      height: 50px;
-      display: block;
-        position: fixed;
-      ;
-    }
-    
-    .content {
-      padding: 16px;
-      margin-bottom: 30px;
-    border-style: solid;
-      border-color: red;
-    
+  float: left;
+  width: 50px;
+  height: 50px;
+  display: block;
+  position: fixed;
+}
+
+/* Content */
+.content {
+  padding: 16px;
+  margin: 20px 20px 15px 20px;
+  margin-bottom: 30px;
+  border-style: solid;
+  border-color: #33ff00;
+}
